--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   
   </div>
 
-  <div class="subtitulo"> <h1>Desarrollo personal</h1></div>
+  <div class="subtitulo"> <h1>Recomendados</h1></div>
   <div id="carousel">
 
     <div class="box"><a href=""><img src="img/2.png" alt=""> </a></div>
