--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.css">
 <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 <link rel="stylesheet" href="css/style2.css">
 <script src="javacrip/proverbios.js"></script>
     <script src="javacrip/codigo.js"></script>
@@ -19,7 +18,7 @@
   
   <nav>
     <div id="caja">
-    <a class="perfil" href="">
+    <a class="perfil" href="index.html">
         <img src="img/perfil.jpg" alt="perfil">
     </a>
     
@@ -35,11 +34,10 @@
  <div id="carrusel">
   
   </div>
-
   <div class="subtitulo"> <h1>Recomendados</h1></div>
   <div id="carousel">
 
-    <div class="box"><a href=""><img src="img/2.png" alt=""> </a></div>
+    <div class="box"><a href="html/salmos.html"><img src="img/salmos/salmos72.png" alt=""> </a></div>
     <div class="box"> <a href=""><img src="img/1.jpeg" alt=""> </a></div>
     <div class="box"><a href=""><img src="img/1.jpeg" alt=""> </a></div>
     <div class="box"><a href=""><img src="img/1.jpeg" alt=""> </a></div>
