--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
    </div>
    </nav>
  <div id="carrusel">
-  
   </div>
   <div class="subtitulo"> <h1>Recomendados</h1></div>
   <div id="carousel">
 
     <div class="box"><a href="html/salmos.html"><img src="img/salmos/salmos72.png" alt=""> </a></div>
-    <div class="box"> <a href=""><img src="img/1.jpeg" alt=""> </a></div>
+    <div class="box"> <a href="./proverbios/proverbios 9,1.html"><img src="img/proverbios/proverbios 9,1.jpg" alt=""> </a></div>
     <div class="box"><a href=""><img src="img/1.jpeg" alt=""> </a></div>
     <div class="box"><a href=""><img src="img/1.jpeg" alt=""> </a></div>
     <div class="box"><a href=""><img src="img/1.jpeg" alt=""> </a></div>
