--- a/html/salmos.html
+++ b/html/salmos.html
@@ -12,8 +12,8 @@
 <script src="javacrip/proverbios.js"></script>
     <script src="javacrip/codigo.js"></script>
    <script src="javacrip/carrusel.js"></script>
-   <link rel="icon" href="img/perfil.jpg" type=".">
-    <title>EL Hombre y Dios</title>
+   <link rel="icon" href="../img/perfil.jpg" type=".">
+    <title>salmos 72 "la gloria de un hijo"</title>
 </head>
 <body>
     <nav>
