--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Bienvenidos al canal donde aprenderemos sobre el desarrollo personal basado en proverbios y salmos, te invito a leer nuestros artículos para tu mejor beneficio">
+    <meta name="keywords" content="salmos, jehová,la bilia,">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.css">
 <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.js"></script>
@@ -13,6 +15,7 @@
    <script src="javacrip/carrusel.js"></script>
    <link rel="icon" href="img/perfil.jpg" type=".">
     <title>EL Hombre y Dios</title>
+    
 </head>
 <body>
   
