--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bienvenidos al canal donde aprenderemos sobre el desarrollo personal basado en proverbios y salmos, te invito a leer nuestros artículos para tu mejor beneficio">
     <meta name="keywords" content="salmos, jehová,la bilia,">
+<meta name="msvalidate.01" content="AFE2FA36A386B85C2B1CA8640DC14DB8" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.css">
 <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.js"></script>
