--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bienvenidos al canal donde aprenderemos sobre el desarrollo personal basado en proverbios y salmos, te invito a leer nuestros artículos para tu mejor beneficio">
     <meta name="keywords" content="salmos, jehová,la bilia,">
-<meta name="msvalidate.01" content="AFE2FA36A386B85C2B1CA8640DC14DB8" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.css">
 <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.js"></script>
@@ -42,7 +41,7 @@
 
     <div class="box"><a href="html/salmos.html"><img src="img/salmos/salmos72.png" alt=""> </a></div>
     <div class="box"> <a href="./proverbios/proverbios 9,1.html"><img src="img/proverbios/proverbios 9,1.jpg" alt=""> </a></div>
-    <div class="box"><a href=""><img src="img/1.jpeg" alt=""> </a></div>
+    <div class="box"><a href="consejos/3 claves para un matrimonio felz.html"><img src="img/1.jpeg" alt=""> </a></div>
     <div class="box"><a href=""><img src="img/1.jpeg" alt=""> </a></div>
     <div class="box"><a href=""><img src="img/1.jpeg" alt=""> </a></div>
     
